sourcery-macros/tests/ui/fail/projection_duplicate_attribute.stderr
error: Duplicate field `id`
  --> tests/ui/fail/projection_duplicate_attribute.rs:11:27
   |
11 | #[projection(id = String, id = u64)]
   |                           ^^^^^^^^
